SLT_Handler/Include/MMC/MMCWFP39.h

INT API spl_arc_deg_move2(double , double, pDOUBLE, double, INT, INT);
INT API spl_arc_deg_move3(double , double, pDOUBLE, double, INT, INT);
INT API spl_arc_deg_move2ax(INT, INT, double, double, pDOUBLE, double, INT, INT);
INT API spl_arc_deg_move3ax(INT, INT, INT, double, double, pDOUBLE, double, INT, INT);
INT API spl_arc_deg_movenax(INT, pINT, double, double, pDOUBLE, double, INT, INT);
INT API spl_auto_arc_deg_move2ax(INT, INT, double, double, pDOUBLE, double, INT, INT, INT);
INT API spl_auto_arc_deg_move3ax(INT, INT, INT, double, double, pDOUBLE, double, INT, INT, INT);
INT API spl_auto_arc_deg_movenax(INT, pINT, double, double, pDOUBLE, double, INT, INT, INT);
INT API arc_3(double , double , double , pDOUBLE);
INT API arc_3ax(INT , INT, INT, double, double, double, pDOUBLE, double, INT);
INT API set_encoder_filter_num(INT, INT);
INT API fset_encoder_filter_num(INT, INT);
INT API get_encoder_filter_num(INT, pINT);
INT API fget_encoder_filter_num(INT, pINT);
INT	API	get_mmc_init_chkx();
INT	API	set_mmc_init_chkx(INT, INT);
INT API spl_line_move1(pDOUBLE, double, INT);
INT API spl_line_move1ax(INT, pDOUBLE, double, INT);
INT API spl_auto_line_move1ax(INT, pDOUBLE, double, INT, INT);
INT API position_compare_interval(INT dir, INT ax, INT bitNo, double startpos,double limitpos, LONG interval,LONG time);
INT API set_control_timer_ax(INT ax, double time);
INT API fset_control_timer_ax(INT ax, double time);
INT API get_control_timer_ax(INT ax, pDOUBLE time);
INT API fget_control_timer_ax(INT ax, pDOUBLE time);
INT API position_io_onoff(INT pos_num, INT bitNo, INT ax, double pos, INT encflag);
INT API position_io_allclear(INT ax);
INT API position_io_clear(INT ax, INT pos_num);
INT API set_friction_gain(INT axis, LONG gain);
INT API fset_friction_gain(INT axis, LONG gain);
INT API get_friction_gain(INT axis, pLONG gain);
INT API fget_friction_gain(INT axis, pLONG gain);
INT API set_friction_range(INT axno, double range);
INT API fset_friction_range(INT axno, double range);
INT API get_friction_range(INT axno, pDOUBLE range);
INT API fget_friction_range(INT axno, pDOUBLE range);
INT API set_system_io(INT ax, INT onoff);
INT API get_system_io(INT ax, pINT onoff);
INT API set_amp_resolution32(INT ax, LONG resolution);
INT API fset_amp_resolution32(INT ax, LONG resolution);
INT API get_amp_resolution32(INT ax, pLONG resolution);
INT API fget_amp_resolution32(INT ax, pLONG resolution);
INT API set_collision_prevent_ax(INT ax, INT enable, INT slave_ax, INT add_sub, INT non_equal, double c_pos, INT type);
INT API get_collision_prevent_ax(INT ax, pINT enable);
INT API set_sync_control_ax(INT ax, INT enable, INT master_ax, LONG gain);
INT API get_sync_control_ax(INT ax, pINT enable, pINT master_ax, pLONG gain);
INT API set_pause_control(INT bn, INT enable, long io_bit);