SLT_Handler/Include/MMC/MMCWFP39.bas


Declare Function spl_arc_deg_move2 Lib "MMCWFP39.dll" (ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer
Declare Function spl_arc_deg_move3 Lib "MMCWFP39.dll" (ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer

Declare Function spl_arc_deg_move2ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer
Declare Function spl_arc_deg_move3ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer
Declare Function spl_arc_deg_movenax Lib "MMCWFP39.dll" (ByVal nlen As Integer, ax As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer

Declare Function spl_auto_arc_deg_move2ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer, ByVal auto_flag As Integer) As Integer
Declare Function spl_auto_arc_deg_move3ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer, ByVal auto_flag As Integer) As Integer
Declare Function spl_auto_arc_deg_movenax Lib "MMCWFP39.dll" (ByVal nlen As Integer, ax As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer, ByVal auto_flag As Integer) As Integer

Declare Function arc_3 Lib "MMCWFP39.dll" (ByVal x_center As Double, ByVal y_center As Double, ByVal angle As Double, pos As Double) As Integer
Declare Function arc_3ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal x_center As Double, ByVal y_center As Double, ByVal angle As Double, pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer

Declare Function set_encoder_filter_num Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal fn As Integer) As Integer
Declare Function fset_encoder_filter_num Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal fn As Integer) As Integer
Declare Function get_encoder_filter_num Lib "MMCWFP39.dll" (ByVal ax As Integer, fn As Integer) As Integer
Declare Function fget_encoder_filter_num Lib "MMCWFP39.dll" (ByVal ax As Integer, fn As Integer) As Integer
Declare Function get_mmc_init_chkx Lib "MMCWFP39.dll" () As Integer
Declare Function set_mmc_init_chkx Lib "MMCWFP39.dll" (ByVal bn As Integer, ByVal val As Integer) As Integer

Declare Function spl_line_move1 Lib "MMCWFP39.dll" (pntx As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function spl_line_move1ax Lib "MMCWFP39.dll" (ByVal ax As Integer, pntx As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function spl_auto_line_move1ax Lib "MMCWFP39.dll" (ByVal ax As Integer, pntx As Double, ByVal vel As Double, ByVal acc As Integer, ByVal AutoOffFlag As Integer) As Integer

Declare Function position_compare_interval Lib "MMCWFP39.dll" (ByVal dir As Integer, ByVal ax As Integer, ByVal bitNo As Integer, ByVal startpos As Double, ByVal limitpos As Double, ByVal interval As Long, ByVal time As Long) As Integer
Declare Function set_control_timer_ax Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal time As Double) As Integer
Declare Function fset_control_timer_ax Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal time As Double) As Integer
Declare Function get_control_timer_ax Lib "MMCWFP39.dll" (ByVal ax As Integer, time As Double) As Integer
Declare Function fget_control_timer_ax Lib "MMCWFP39.dll" (ByVal ax As Integer, time As Double) As Integer

Declare Function position_io_onoff Lib "MMCWFP39.dll" (ByVal pos_num As Integer, ByVal bitNo As Integer, ByVal ax As Integer, ByVal pos As Double, ByVal encflag As Integer) As Integer
Declare Function position_io_allclear Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function position_io_clear Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal pos_num As Integer) As Integer

Declare Function set_friction_gain Lib "MMCWFP39.dll" (ByVal axis As Integer, ByVal gain As Long) As Integer
Declare Function fset_friction_gain Lib "MMCWFP39.dll" (ByVal axis As Integer, ByVal gain As Long) As Integer
Declare Function get_friction_gain Lib "MMCWFP39.dll" (ByVal axis As Integer, gain As Long) As Integer
Declare Function fget_friction_gain Lib "MMCWFP39.dll" (ByVal axis As Integer, gain As Long) As Integer
Declare Function set_friction_range Lib "MMCWFP39.dll" (ByVal axno As Integer, ByVal range As Double) As Integer
Declare Function fset_friction_range Lib "MMCWFP39.dll" (ByVal axno As Integer, ByVal range As Double) As Integer
Declare Function get_friction_range Lib "MMCWFP39.dll" (ByVal axno As Integer, range As Double) As Integer
Declare Function fget_friction_range Lib "MMCWFP39.dll" (ByVal axno As Integer, range As Double) As Integer

Declare Function set_system_io Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal onoff As Integer) As Integer
Declare Function get_system_io Lib "MMCWFP39.dll" (ByVal ax As Integer, onoff As Integer) As Integer
Declare Function set_amp_resolution32 Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal resolution As Long) As Integer
Declare Function fset_amp_resolution32 Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal resolution As Long) As Integer
Declare Function get_amp_resolution32 Lib "MMCWFP39.dll" (ByVal ax As Integer, resolution As Long) As Integer
Declare Function fget_amp_resolution32 Lib "MMCWFP39.dll" (ByVal ax As Integer, resolution As Long) As Integer

Declare Function set_collision_prevent_ax Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal enable As Integer, ByVal slave_ax As Integer, ByVal add_sub As Integer, ByVal non_equal As Integer, ByVal c_pos As Double, ByVal mtype As Integer) As Integer
Declare Function get_collision_prevent_ax Lib "MMCWFP39.dll" (ByVal ax As Integer, enable As Integer) As Integer
Declare Function set_sync_control_ax Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal enable As Integer, ByVal master_ax As Integer, ByVal gain As Long) As Integer
Declare Function get_sync_control_ax Lib "MMCWFP39.dll" (ByVal ax As Integer, enable As Integer, master_ax As Integer, gain As Long) As Integer

Declare Function set_pause_control Lib "MMCWFP39.dll" (ByVal bn As Integer, ByVal enable As Integer, ByVal io_bit As Long) As Integer

